  - Add org-unit selector to switch between the user`s assigned org-units.
  - The oguid now consists of admin-unit-id and IntId.
  - Above changes concern the following functionality:

    - Sharing View
    - OGDS-Vocabularies
    - Default of task `responsible_client`
    - Cross plone-site request authentication
    - Cross plone-site wizards


- Setup [phgross, deiferni]:

  - Make sure that inflator content-creation runs after gever setup.
  - Test that we correctly override ftw.inflator setuphandler configuration.
  - Create admin units and org units from generic setup profile.


- Inbox/Forwarding [phgross, deiferni]:

  - Use globalindex as data-source for task-listings (Overview, AssignedTasks, IssuedTasks).
  - Fix forwarding immediate view, use `issued_inbox_tasks` tab.
  - Assign forwarding to dossier: reset issuer to current inbox.
  - Accept task, edit in new dossier: Set default dossier title only for tasks but not for forwardings.
  - Inbox now ontains multiple Inboxes, one for each `OrgUnit`:

    - Allow nested inboxes.
    - Map inboxes and Orgunits with `ResponsibleOrgUnit` behavior.
    - Add redirecting to current subinbox.
    - Allow multiple yearfolders per inbox, one for each `OrgUnit`.

  - Disable statefilter for yearfolder's `ClosedForwardings` listing.
  - Rework `InboxTransitionController` guards.


- Tasks [phgross, deiferni]:

  - Refactor syncing tasks from plone to globalindex.
  - Use globalindex as data-source for task-listings (PersonalOverview).
  - Globalindex:

    - Introduce a specific query class for `Task`.
    - Make some task fields required.
    - Add containing_subdossier column.
    - Migrate data for issuing_org_unit.
    - Use integer sequence numbers.

  - Refactored display of task responses:

    - Include response descriptions.
    - Add permission-check for edit and delete actions.
    - Add response entry for task creation.

  - Add action menu viewlet:

    - Display transitions as buttons.