@@ -12,13 +12,13 @@ from zope.component import queryAdapter
 
 class TestLocalReferenceNumber(FunctionalTestCase):
 
-    def test_plone_site_returns_client_id(self):
+    def test_plone_site_returns_admin_units_abbreviation(self):
         create(Builder('admin_unit')
-               .having(unit_id=u'fake', title=u'Fake')
+               .having(unit_id=u'fake', title=u'Fake Unit', abbreviation="FakeU")
                .as_current_admin_unit())
 
         self.assertEquals(
-            u'Fake', IReferenceNumber(self.portal).get_local_number())
+            u'FakeU', IReferenceNumber(self.portal).get_local_number())
 
     def test_repository_root_returns_empty_string(self):
         root = create(Builder('repository_root'))
